@@ -1,3 +1,8 @@
+2016-07-13  Ola Jeppsson  <ola@adapteva.com>
+
+	* sim-main.h (SIM_ENGINE_HALT_HOOK): Null check cpu before calling
+	epiphany_any_periphal_active_p ().
+
 2016-07-12  Ola Jeppsson  <ola@adapteva.com>
 
 	* epiphany.c (epiphanybf_cpu_reset): Don't call SET_H_INT_IDLEBIT.
